--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.25",
     "axios": "^0.21.1",
+    "element-plus": "^2.1.10",
+    "vue": "^3.2.25",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
+    "sass": "^1.50.0",
+    "sass-loader": "^8.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
     "vue-tsc": "^0.29.8"
