--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.21.1",
     "element-plus": "^2.1.10",
+    "nprogress": "^0.2.0",
+    "screenfull": "^5.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0"
