--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "element-plus": "^2.1.10",
     "nprogress": "^0.2.0",
+    "particles.vue3": "^2.0.6",
     "screenfull": "^5.1.0",
     "vue": "^3.2.25",
     "vue-router": "^4.0.0-0",
