--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "nprogress": "^0.2.0",
     "screenfull": "^5.1.0",
     "vue": "^3.2.25",
+    "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "wangeditor": "^4.7.5"
