--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.21.1",
     "element-plus": "^2.1.10",
+    "file-saver": "^2.0.2",
     "nprogress": "^0.2.0",
     "screenfull": "^5.1.0",
     "vue": "^3.2.25",
