--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "wangeditor": "^4.7.5"
+    "wangeditor": "^4.7.5",
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
