--- a/package.json
+++ b/package.json
@@ -10,17 +10,18 @@
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
     "axios": "^0.21.1",
+    "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
     "file-saver": "^2.0.2",
     "nprogress": "^0.2.0",
+    "qiankun": "^2.6.3",
     "screenfull": "^5.1.0",
     "vue": "^3.2.25",
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
     "wangeditor": "^4.7.5",
-    "xlsx": "^0.17.0",
-    "qiankun": "^2.6.3"
+    "xlsx": "^0.17.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
