--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc --noEmit --skipLibCheck && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
@@ -25,11 +26,20 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
+    "@typescript-eslint/eslint-plugin": "^5.27.0",
+    "@typescript-eslint/parser": "^5.27.0",
     "@vitejs/plugin-vue": "^2.3.1",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-define-config": "^1.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.0.1",
+    "prettier": "^2.6.2",
     "sass": "^1.50.0",
     "sass-loader": "^8.0.2",
     "typescript": "^4.5.4",
     "vite": "^2.9.2",
+    "vue-eslint-parser": "^9.0.2",
     "vue-tsc": "^0.29.8"
   },
   "eslintConfig": {
