--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
     "file-saver": "^2.0.2",
+    "mitt": "^3.0.0",
     "nprogress": "^0.2.0",
     "qiankun": "^2.6.3",
     "screenfull": "^5.1.0",
