--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
+    "@wangeditor/editor": "^5.1.1",
+    "@wangeditor/editor-for-vue": "^5.1.11",
     "axios": "^0.21.1",
     "echarts": "^5.3.2",
     "element-plus": "^2.1.10",
@@ -22,7 +24,6 @@
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.0-0",
     "vuex": "^4.0.0-0",
-    "wangeditor": "^4.7.5",
     "xlsx": "^0.17.0"
   },
   "devDependencies": {
