--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vue-tsc --noEmit --skipLibCheck && vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix"
+    "lint": "eslint . --ext .vue,.js,.ts,.jsx,.tsx --fix",
+    "prettier:comment": "自动格式化当前目录下的所有文件",
+    "prettier": "prettier --write"
   },
   "dependencies": {
     "@element-plus/icons-vue": "^1.1.4",
@@ -24,7 +26,8 @@
     "vue-i18n": "^9.0.0",
     "vue-router": "^4.0.16",
     "vuex": "^4.0.2",
-    "xlsx": "^0.17.0"
+    "xlsx": "^0.17.0",
+    "vuex-persistedstate": "^4.1.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.25",
